data/all_generated_tests/raw_wast_tests/loop_UnreachableCodeExecution_460.wast
;; 1. **Direct Branch to Unreachable Instruction**:    - **Description**: Create a loop with an immediate branch (`br 0`) that leads to an unreachable instruction within the loop body.    - **Constraint Checked**: Validates the handling of direct branches to unreachable instructions within loop contexts.    - **Unreachable Execution Check**: Ensures that the branch does not erroneously skip over the unreachable instruction, which should result in termination.

(assert_invalid
  (module
    (func (result i32)
      (loop (result i32)
        (br 0)
        unreachable
      )
    )
  )
  "type mismatch"
)